--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,15 @@
 </head>
 <body>
     <div id="main">
-        <input type="hidden" name="_csrf" v-bind:value="csrfToken">
-        <div id="maindiv" v-bind:class="{ noscroll: show }">
         <h1 class="title"> BLISTERING CONSCIENCE </h1>
-        <register v-if="registerNow"></register>
-        <image-submission v-else v-bind:img-id="imgId"v-bind:logged-out="loggedOut"></image-submission>
-        <h1 v-bind:class="headingClassName">{{ heading }}</h1>
+        <div id="maindiv" v-bind:class="{ noscroll: show }">
+        <div class="top">
+        <image-submission v-bind:img-id="imgId"></image-submission>
+        <login v-if="!loggedIn" v-bind:register-now="registerNow" v-on:loggedin="logUserIn"></login>
+        <input type="hidden" name="_csrf" v-bind:value="csrfToken">
+        <logged-in v-if="loggedIn" v-bind:username="currentUser" v-on:logout="logout"></logged-in>
+        <h2 v-bind:class="headingClassName">{{ heading }} <span class="currentUser">{{currentUser}}</span></h2>
+    </div>
         <div class="container">
             <div class="divs" v-for="pic in pics" v-bind:databaseId="pic.id">
                 <a v-bind:href="pic.url"><img class="pics" v-bind:src="pic.image"> <p>{{pic.title}}</p></a>
