masonry working more consistently now, still when adding new divs. should probably still convert the transitions and most everything to a vue style

--- a/public/index.html
+++ b/public/index.html
@@ -6,26 +6,25 @@
 </head>
 <body>
     <div id="main">
-        <h1 class="title"> BLISTERING CONSCIENCE </h1>
-        <div id="maindiv" v-bind:class="{ noscroll: show }">
+        <h1 class="title" v-cloak v-once> BLISTERING CONSCIENCE </h1>
+        <div id="maindiv" v-bind:class="{ noscroll: show }" v-cloak>
         <div class="top">
             <image-submission v-bind:img-id="imgId" v-on:upload-count="uploadIncrement"></image-submission>
             <login v-if="!loggedIn" v-bind:register-now="registerNow" v-on:loggedin="logUserIn"></login>
-            <input type="hidden" name="_csrf" v-bind:value="csrfToken">
+            <input type="hidden" name="_csrf" v-bind:value="csrfToken" v-once>
             <h2 v-bind:class="headingClassName">{{ heading }} <span class="currentUser">{{currentUser}}</span></h2>
             <logged-in v-if="loggedIn" v-bind:username="currentUser" v-on:logout="logout"></logged-in>
         </div>
-        <transition-group name="slide-fade" tag="div" class="masonry">
-            <div class="masonry-panel" v-for="pic in pics" v-bind:databaseId="pic.id"  v-bind:key="pic.id">
-                    <div class="masonry-panel-content">
-                        <a v-bind:href="pic.url"><img class="pics" v-bind:src="pic.image"> <h2>{{pic.title}}</h2></a> <p v-html="pic.description"></p>
-                    </div>
-            </div>
-        </transition-group>
+        <masonry-board v-bind:pics="pics"></masonry-board>
     </div>
-    <p> {{loadMessage}} </p>
+    <p v-cloak> {{loadMessage}} </p>
     <image-modal v-if="show" v-bind:img-id="imgId"></image-modal>
     </div>
+    <style>
+  [v-cloak] {
+    display: none;
+  }
+</style>
     <script src="/js/vue.js"></script>
     <script src="/js/axios.min.js"></script>
     <script src="/js/script.js"></script>
